fix(css): align social bar correctly in Firefox
also removes Sublime file committed in error

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ ul.social {
   display: inline-block;
   text-align:center;
   margin:0;
+  padding:0;
   vertical-align: middle;
   line-height: 1;
 }
